--- a/review-web/src/main/webapp/WEB-INF/views/review-list.jspx
+++ b/review-web/src/main/webapp/WEB-INF/views/review-list.jspx
@@ -18,7 +18,16 @@
                     <tr>
                         <td>${task.name}</td>
                         <td>${task.description}</td>
-                        <td><a href="${contextPath}review/${task.id}">Edit</a></td>
+                        <td>
+                            <c:choose>
+                                <c:when test="${task.taskDefinitionKey eq 'approveReview'}">
+                                    <a href="${contextPath}review-approval/${task.id}">Edit</a>
+                                </c:when>
+                                <c:otherwise>
+                                    <a href="${contextPath}review/${task.id}">Edit</a>
+                                </c:otherwise>
+                            </c:choose>
+                        </td>
                     </tr>
                 </c:forEach>
             </table>
