--- a/review-web/src/main/webapp/WEB-INF/views/review.jspx
+++ b/review-web/src/main/webapp/WEB-INF/views/review.jspx
@@ -1,33 +1,53 @@
 <div xmlns:spring="http://www.springframework.org/tags" xmlns:jsp="http://java.sun.com/JSP/Page"
-     xmlns:form="http://www.springframework.org/tags/form" version="2.0">
+     xmlns:form="http://www.springframework.org/tags/form" xmlns:c="http://java.sun.com/jsp/jstl/core"
+     xmlns:util="urn:jsptagdir:/WEB-INF/tags/util" version="2.0">
 
     <jsp:directive.page contentType="text/html;charset=UTF-8" />
     <jsp:output omit-xml-declaration="yes" />
 
     <spring:url value="/" var="contextPath"/>
 
-    <h1>${review.reviewType} review for "${review.employee.firstname} ${review.employee.lastname}"</h1>
-    <form:form action="${contextPath}review/${taskId}" method="POST" modelAttribute="review">
-        <div class="fields">
-            <label for="content">Content: </label>
-            <form:textarea id="content" path="content"/>
-        </div>
-        <br/>
-        <div class="fields">
-            <label for="mark">Mark: </label>
-            <form:select id="mark" path="mark">
-                <form:option value="1" label="1"/>
-                <form:option value="2" label="2"/>
-                <form:option value="3" label="3"/>
-                <form:option value="4" label="4"/>
-                <form:option value="5" label="5"/>
-            </form:select>
-        </div>
-        <br/>
-        <div class="buttons">
-            <input id="submitReviewRequest" type="submit" name="submit" value="Submit"/>
-        </div>
-    </form:form>
+    <spring:url value="/resources/images/warning.png" var="logo"/>
+
+    <util:panel id="reviewPanel" title="${review.reviewType} review for ${review.employee.firstname} ${review.employee.lastname}">
+        <form:form action="${contextPath}review/${taskId}" method="POST" modelAttribute="review">
+            <div class="fields">
+                <label for="content">Content: </label>
+                <form:textarea id="content" path="content"/>
+            </div>
+            <br/>
+            <div class="fields">
+                <label for="mark">Mark: </label>
+                <form:select id="mark" path="mark">
+                    <form:option value="1" label="1"/>
+                    <form:option value="2" label="2"/>
+                    <form:option value="3" label="3"/>
+                    <form:option value="4" label="4"/>
+                    <form:option value="5" label="5"/>
+                </form:select>
+            </div>
+            <br/>
+            <div class="buttons">
+                <input id="submitReviewRequest" type="submit" name="submit" value="SUBMIT"/>
+            </div>
+        </form:form>
+
+        <c:if test="${review.approved == false}">
+            <br/>
+            <div class="dijitTitlePane">
+                <div class="dijitTitlePaneTitle dijitTitlePaneTitleOpen dijitOpen">
+                    Reject reason
+                </div>
+                <div class="dijitTitlePaneContentOuter">
+                    <div class="dijitTitlePaneContentInner">
+                        <img align="left" style="margin-right: 5px" src="${logo}"/>
+                        ${rejectReason}
+                    </div>
+                </div>
+            </div>
+            <br/>
+        </c:if>
+    </util:panel>
 
     <script type="text/javascript">
         Spring.addDecoration(new Spring.ElementDecoration({elementId : 'content', widgetType : 'dijit.form.SimpleTextarea', widgetAttrs : {promptMessage: 'Enter content', required : true}}));
