--- a/review-web/src/main/webapp/WEB-INF/views/menu.jspx
+++ b/review-web/src/main/webapp/WEB-INF/views/menu.jspx
@@ -6,13 +6,15 @@
     <jsp:output omit-xml-declaration="yes"/>
 
     <sec:authorize access="hasRole('lm')" var="hasLMRole"/>
+    <sec:authorize access="hasRole('admin')" var="hasAdminRole"/>
 
     <menu:menu id="_menu" z="nZaf43BjUg1iM0v70HJVEsXDopc=">
-        <menu:category id="c_employee" z="WxiVAJUlwzLkYi6u7YpEjYOT82A=" render="${hasLMRole}">
+        <menu:category id="c_employee" label="Employees" z="WxiVAJUlwzLkYi6u7YpEjYOT82A=" render="${hasLMRole}">
             <menu:item id="i_employee_list" messageCode="Employee list" url="/employee-list" z="gAIxvrBOHQC/N0HWTGD46jzwyk8="/>
         </menu:category>
-        <menu:category id="c_review" z="WxiVAJUlwzLkYi6u7YpEjYOT82A=">
-            <menu:item id="i_review_list" messageCode="Review list" url="/review-list" z="gAIxvrBOHQC/N0HWTGD46jzwyk8="/>
+        <menu:category id="c_review" label="Reviews" z="WxiVAJUlwzLkYi6u7YpEjYOT82A=">
+            <menu:item id="i_review_list" messageCode="Review tasks" url="/review-list" z="gAIxvrBOHQC/N0HWTGD46jzwyk8=" render="${!hasAdminRole}"/>
+            <menu:item id="i_review_report" messageCode="Report" url="/review-report" z="gAIxvrBOHQC/N0HWTGD46jzwyk8=" render="${hasAdminRole}"/>
         </menu:category>
     </menu:menu>
 </div>
