--- a/review-web/src/main/webapp/WEB-INF/views/review-list.jspx
+++ b/review-web/src/main/webapp/WEB-INF/views/review-list.jspx
@@ -1,41 +1,43 @@
 <div xmlns:spring="http://www.springframework.org/tags" xmlns:jsp="http://java.sun.com/JSP/Page"
-     xmlns:form="http://www.springframework.org/tags/form" version="2.0" xmlns:c="http://java.sun.com/jsp/jstl/core">
+     xmlns:util="urn:jsptagdir:/WEB-INF/tags/util" version="2.0" xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <jsp:directive.page contentType="text/html;charset=UTF-8" />
     <jsp:output omit-xml-declaration="yes" />
 
     <spring:url value="/" var="contextPath"/>
 
-    <c:choose>
-        <c:when test="${not empty taskList}">
-            <table border="1">
-                <tr>
-                    <th>Name</th>
-                    <th>Description</th>
-                    <th>Status</th>
-                    <th>Action</th>
-                </tr>
-                <c:forEach items="${taskList}" var="task">
-                    <tr>
-                        <td>${task.name}</td>
-                        <td>${task.description}</td>
-                        <td>${task.processVariables['review']}</td>
-                        <td>
-                            <c:choose>
-                                <c:when test="${task.taskDefinitionKey eq 'approveReview'}">
-                                    <a href="${contextPath}review-approval/${task.id}">Edit</a>
-                                </c:when>
-                                <c:otherwise>
-                                    <a href="${contextPath}review/${task.id}">Edit</a>
-                                </c:otherwise>
-                            </c:choose>
-                        </td>
-                    </tr>
-                </c:forEach>
-            </table>
-        </c:when>
-        <c:otherwise>
-            <h1>0 reviews</h1>
-        </c:otherwise>
-    </c:choose>
+    <util:panel id="reviewsPanel" title="List all Review Tasks">
+        <c:choose>
+            <c:when test="${not empty taskList}">
+                <table border="1">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Description</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <c:forEach items="${taskList}" var="task">
+                        <tr>
+                            <td>${task.name}</td>
+                            <td>${task.description}</td>
+                            <td>
+                                <c:choose>
+                                    <c:when test="${task.taskDefinitionKey eq 'approveReview'}">
+                                        <a href="${contextPath}review-approval/${task.id}">Edit</a>
+                                    </c:when>
+                                    <c:otherwise>
+                                        <a href="${contextPath}review/${task.id}">Edit</a>
+                                    </c:otherwise>
+                                </c:choose>
+                            </td>
+                        </tr>
+                    </c:forEach>
+                </table>
+            </c:when>
+            <c:otherwise>
+                No reviews found.
+            </c:otherwise>
+        </c:choose>
+    </util:panel>
 </div>
